--- a/src/components/CountryPicker/CountryPicker.module.css
+++ b/src/components/CountryPicker/CountryPicker.module.css
@@ -2,4 +2,6 @@
 .formControl {
     width: 30%;
     margin-bottom: 30px !important;
+    background-color: rgb(255,255,255);
+    border-radius: 8px;
 }
