--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     width: 65%;
+    background-color: #263238;
 }
 
 @media only screen and (max-width: 770px) {
